@@ -1,3 +1,4 @@
+* Remove Tabs Position option
 * Manage product attribute
 * Remove float_time widget
 * Add TimeDelta field
